# photo-collage

./: .gitignore  CMakeLists.txt  README.md  collage.py  requirements.txt  setup.sh  video.py
src/: collage.c  image.c  image.h  parallel.c  parallel.h  stb_impl.c  video.c  video_render.c  video_render.h
